# Cheetoh

./: .gitignore  Cargo.toml  Cheetoh.sln  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  build.cmd  build.fsx  build.sh  package-lock.json  package.json  paket.dependencies  pnpm-lock.yaml  read_dev.db  read_dev.db-shm  read_dev.db-wal  tailwind.config.js  webpack.config.js
.cargo/: config.toml
config/: development.yaml  test.yaml
examples/: playground.rs
src/: app.rs  helper.rs  lib.rs  main.rs
src/Cheetoh/: Program.fs  ReleaseNotes.fs
src/Cheetoh/Templates/: App.fs  Index.fs  InternalError.fs  NotFound.fs
src/Client/: App.fs  Client.fs  Client.fsproj  Global.fs  State.fs  Types.fs  webpack.config.js
src/Client/Helper/: CommonHelpers.fs  Fable.Import.IziToast.fs  Http.fs
src/Client/Pages/Application/: Application.fs  Home.fs
src/Client/Pages/Authentication/: Authentication.fs  Email.fs  Login.fs  SignUp.fs
src/Client/public/: about.html  admin.html  home.html  index.html  test.html
src/Client/public/Views/: About.cshtml  Home.cshtml  _Layout.cshtml
src/Client/public/Views/Partials/: Dummy.cshtml
src/Client/public/bundle/: 1.app.css  1.app.css.map  admin.html  app.css  app.css.map  app.js  app.js.map  commons~app.js  commons~app.js.map  index.html
src/Client/public/bundle/js/: app.js  vendors.js
src/Client/sass/: login.sass  main.sass
src/Server/: Program.fs  Server.fs  Server.fsproj  paket.references
src/Server/DB/: Helper.fs  Types.fs
src/Server/Helper/: Common.fs  Security.fs
src/Server/Services/: Cheetoh.fs  User.fs
src/Server/Views/: About.fs  Home.fs  Layout.fs
src/Server/Views/Partials/: Dummy.fs
src/Shared/: Config.fs  Shared.fs  Shared.fsproj
src/Shared/Validation/: CommonStringValidation.fs  ROPHelper.fs
src/api/: get_blog.rs  mod.rs  save_blog.rs
src/dto/: app_state.rs
src/helper/: blog.rs  get_blogs.rs  login.rs  mod.rs  singup.rs
src/pages/: add_blog.rs  home_page.rs  index.rs  login_page.rs  mod.rs  signup_page.rs  write_blog.rs
templates/: add_blog.html  index.html
templates/components/: footer.html  header.html  navbar.html
templates/layouts/: base.html
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
