[package]
name = "tera_cheetoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-session = { version = "0.5.0", features = ["cookie-session"] }
tera = "1"
anyhow = "1"
thiserror = "1.0.57"
env_logger = { version = "0", features = [] }
log = { version = "0", features = [] }
sqlx = { version = "0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
actix-files = "0"
actix-web-lab = "0"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1", optional = true}
uuid = { version = "1", features = ["serde", "v4"] }